--- a/covid.ipynb
+++ b/covid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -28,13 +28,36 @@
       "states shape is  (7274, 5)\n",
       "\n",
       "county tails is                date      county    state     fips  cases  deaths\n",
-      "322646  2020-07-12  Sweetwater  Wyoming  56037.0    138       0\n",
-      "322647  2020-07-12       Teton  Wyoming  56039.0    157       1\n",
-      "322648  2020-07-12       Uinta  Wyoming  56041.0    202       0\n",
-      "322649  2020-07-12    Washakie  Wyoming  56043.0     42       5\n",
-      "322650  2020-07-12      Weston  Wyoming  56045.0      1       0 \n",
+      "327991  2020-07-12  Sweetwater  Wyoming  56037.0    138       0\n",
+      "327992  2020-07-12       Teton  Wyoming  56039.0    157       1\n",
+      "327993  2020-07-12       Uinta  Wyoming  56041.0    202       0\n",
+      "327994  2020-07-12    Washakie  Wyoming  56043.0     42       5\n",
+      "327995  2020-07-12      Weston  Wyoming  56045.0      1       0 \n",
       "\n",
-      "county shape is (322651, 6)\n"
+      "county shape is (327996, 6)\n",
+      "\n",
+      "excess deaths tails are               country placename frequency start_date end_date  \\\n",
+      "6707  United States       NaN    weekly        NaN      NaN   \n",
+      "6708  United States       NaN    weekly        NaN      NaN   \n",
+      "6709  United States       NaN    weekly        NaN      NaN   \n",
+      "6710  United States       NaN    weekly        NaN      NaN   \n",
+      "6711  United States       NaN    weekly        NaN      NaN   \n",
+      "\n",
+      "                   year  month  week  deaths  expected_deaths  excess_deaths  \\\n",
+      "6707  2015-2019 average     11  47.0   47199              NaN            NaN   \n",
+      "6708  2015-2019 average     12  48.0   47946              NaN            NaN   \n",
+      "6709  2015-2019 average     12  49.0   48758              NaN            NaN   \n",
+      "6710  2015-2019 average     12  50.0   49557              NaN            NaN   \n",
+      "6711  2015-2019 average     12  51.0   50286              NaN            NaN   \n",
+      "\n",
+      "     baseline  \n",
+      "6707      NaN  \n",
+      "6708      NaN  \n",
+      "6709      NaN  \n",
+      "6710      NaN  \n",
+      "6711      NaN   \n",
+      "\n",
+      "excess shape is (6712, 12)\n"
      ]
     }
    ],
@@ -57,7 +80,35 @@
     "\n",
     "county_df = pd.read_csv(county)\n",
     "\n",
-    "print(\"\\ncounty tails is \", county_df.tail(), \"\\n\\ncounty shape is\", county_df.shape)\n"
+    "print(\"\\ncounty tails is \", county_df.tail(), \"\\n\\ncounty shape is\", county_df.shape)\n",
+    "\n",
+    "excess = '/Users/mutecypher/Documents/GitHub/covid-19-data/excess-deaths/deaths.csv'\n",
+    "\n",
+    "excess_df = pd.read_csv(excess)\n",
+    "\n",
+    "print(\"\\nexcess deaths tails are  \", excess_df.tail(), \"\\n\\nexcess shape is\", excess_df.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7269         Virginia\n",
+      "7270       Washington\n",
+      "7271    West Virginia\n",
+      "7272        Wisconsin\n",
+      "7273          Wyoming\n",
+      "Name: state, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(states_df['state'].tail())"
    ]
   },
   {
